sample/Views/Error/NotFound.cshtml
@model ErrorViewModel
@{
    ViewData["Title"] = "Not Found";
}

<h1 class="text-warning">404 - Not Found</h1>
<h2>The page you requested could not be found.</h2>

@if (Model?.ShowRequestId == true)
{
    <p>
        <strong>Request ID:</strong> <code>@Model.RequestId</code>
    </p>
}

<p><a href="/">Return to Home</a></p>
